lab03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-demo-stable
spec:
  ingressClassName: nginx
  rules:
  - host: canary-demo.com
    http:
      paths:
      - path: /success
        pathType: Prefix
        backend:
          service:
            name: canary-demo-stable
            port:
              number: 80
